<resources>
    <string name="app_name">My Yearbook</string>
    <string name="angela_sutton">Angela Sutton</string>
    <string name="activities">Loves her dog </string>
    <string name="combined"> Angela Sutton          Loves her dog</string>
    <string name="imagedescription">A small brown and white dog smiling.</string>
    <string name="Change">Change to Next Page.</string>
    <string name="Grad">My Graduation Plan</string>
    <string name="Steps"> 1. Improve and reformat my resume. 2. Apply to internships. 3. Make connections with people in my field.</string>
    <string name="title_activity_zak">ZakActivity</string>
    <string name ="Welcome">Welcome!</string>
    <string name ="Hi"> Hi! I am Om</string>
    <string name ="Major"> I am a Computer Science student at SJCNY, Brooklyn.</string>
    <!-- Strings used for fragments for navigation -->
    <string name ="Continue"> Continue </string>
    <string name ="Plan"> My Plan for Summer 2022 </string>
    <string name = "Step1">1. Work on my resume.</string>
    <string name = "Step2">2. Extensive search for possible software engineering internship and apply to them.</string>
    <string name = "Step3">3. Complete some valuable online programming courses from Coursera and Udemy.</string>
    <string name = "returnS">  Continue to 1st page </string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="MadaraQuote">I am the greatest Uchiha in Konoha</string>
    <string name="madaraDescription">Madara</string>
    <string name="Madar_Uchiha">Madara Uchiha</string>
    <string name="ZakNextActText">I plan to do so by training hard and staying true to my ninja way!</string>
    <string name="next_person">Next Person</string>
    <string name="next_person2">Next Person</string>
    <string name="next_page">Next Page</string>

    <string name ="channel"> Notify me </string>
    <string name = "description"> Notification for dog </string>
</resources>