<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView

        android:id="@+id/mytextView"
        android:layout_width="321dp"
        android:layout_height="226dp"
        android:background="@android:color/holo_green_dark"
        android:gravity="center"
        android:lines="3"
        android:text="@string/combined"
        android:textAppearance="@android:style/TextAppearance.Material.Body2"
        android:textColor="#212121"
        android:textSize="40sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="366dp"
        android:layout_height="359dp"
        android:layout_marginBottom="147dp"
        android:contentDescription="@string/imagedescription"
        app:layout_constraintBottom_toTopOf="@+id/mytextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/freida" />

    <Button
        android:id="@+id/mybutton"
        android:layout_width="250dp"
        android:layout_height="92dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="27dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/Change"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textSize="24sp"
        android:onClick="onClick"
        app:layout_constraintBottom_toTopOf="@+id/mytextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>